# GraduationProject2025

./: .gitignore  README.md  dev_requirements.in  dev_requirements.txt  environment_cpu.yml  environment_gpu.yml  pyproject.toml  runtime_requirements.in  runtime_requirements.txt  setup.sh
docs/: ENV_MANAGMENT.md
docs/notebooks/: dataset_creation_example.ipynb
scripts/download/: download_pdfvqa.sh
scripts/misc/: sample_dataset.py  split_qa_file.py  standardize_raw_documents.py  standardize_slidevqa.py
scripts/run/: example.py  rag_example.py
scripts/run/convert_documents/: convert_documents.py  convert_documents.slurm
scripts/run/push_to_hub/: push_to_hub.py  push_to_hub.slurm
scripts/run/unify/: unify.py  unify.slurm
scripts/slurm/: download_slidevqa.sh  unify_dude.sh  unify_mpdocvqa.sh
src/docrag/: faiss_test.ipynb
src/docrag/config/: __init__.py  logging.py
src/docrag/datasets/: __init__.py  corpus_index.py  load.py  utils.py
src/docrag/datasets/hf/: __init__.py  features.py  hub.py  load.py
src/docrag/datasets/index/: __init__.py  corpus_index.py
src/docrag/datasets/transform/: __init__.py  add_columns.py  filter.py  project.py  task_transform.py
src/docrag/demo/: __init__.py  base.py  generate.py  generation.py  index_manager.py  ingestion.py  main.py  models.py  rag.py  registry.py  retrieval.py  retrieve.py  ui.py
src/docrag/generation/: __init__.py  adapter.py  evaluate.py  generator.py  inference.py  registry.py  utils.py
src/docrag/generation/adapters/: __init__.py  internvl.py  qwen.py
src/docrag/retrieval/: base.py  index.py  retriever.py
src/docrag/schema/: __init__.py  corpus.py  dataset.py  enums.py  rag.py  raw_entry.py  unified_entry.py
src/docrag/schema/config/: __init__.py  generation.py  generator.py  image_processor.py  model.py  tokenizer.py
src/docrag/schema/entries/: __init__.py  corpus.py  (+4 more)
src/docrag/unification/: __init__.py  exceptions.py  registry.py  unifier.py
src/docrag/unify/: base.py  dude.py  mmlongbenchdoc.py  mpdocvqa.py
src/docrag/utils/: __init__.py  logger.py  timer.py
tests/: test_retrieval.py
trials/generation/: results_0.json  results_1.json  trial.ipynb
(+22 files in other folders)
