[project]
name = "docrag"
version = "0.1.0"
description = ""
authors = [{ name = "AHS-uni", email = "abdhatemsh.uni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "datasets[vision]>=3.6",
    "pillow>=11",
    "pdf2image>=1.17,<2.0",
    "hf-xet>=1.1.3,<2.0.0",
    "transformers>=4.52.4,<5.0.0",
    "qwen-vl-utils>=0.0.11,<0.0.12"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
