[project]
name = "docrag"
version = "0.1.0"
description = ""
authors = [{ name = "AHS-uni", email = "abdhatemsh.uni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
             "numpy<2",
             "pydantic>=2.11",
             "pydantic-settings>=2.9",
             "datasets[vision]>=3.6",
             "pillow>=11"
]

[project.optional-dependencies]
dev = [
    "pipdeptree>=2.26",
    "ruff>=0.4",
    "pytest>=8",
    "black>=24.4"
]

[tool.poetry]
packages = [{ include = "docrag", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
