[project]
name = "docrag"
version = "0.1.0"
description = ""
authors = [{ name = "AHS-uni", email = "abdhatemsh.uni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
             "numpy<2",
             "pydantic>=2.11",
             "pydantic-settings>=2.9",
             "datasets[vision]>=3.6",
             "pillow>=11",
             "pdf2image (>=1.17.0,<2.0.0)",
             "hf-xet (>=1.1.3,<2.0.0)",
             "transformers (>=4.52.4,<5.0.0)",
             "qwen-vl-utils (>=0.0.11,<0.0.12)"
]

[tool.poetry]
packages = [{ include = "docrag", from = "src" }]

[tool.poetry.group.dev.dependencies]
jupyter-resource-usage = "^1.1.1"
pipdeptree = "^2.26"
ruff = "^0.11.12"
pytest = "^8"

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
